--- a/index.html
+++ b/index.html
@@ -11,28 +11,29 @@
 <body>
     <main class="calculator">
         <div class="display">
-            Display
+            <div class="history"></div>
+            <div class="current"></div>
         </div>
         <div class="buttons">
             <button class="btn" data-action="clear">AC</button>
             <button class="btn" data-action="delete">DEL</button>
-            <button class="btn" data-action="operator">+/-</button>
-            <button class="btn" data-action="operator">/</button>
+            <button class="btn" data-action="plusminus">+/-</button>
+            <button class="btn" data-action="operator" data-value="/">/</button>
 
             <button class="btn" data-value="7">7</button>
             <button class="btn" data-value="8">8</button>
             <button class="btn" data-value="9">9</button>
-            <button class="btn" data-action="operator">*</button>
+            <button class="btn" data-action="operator" data-value="*">*</button>
 
             <button class="btn" data-value="4">4</button>
             <button class="btn" data-value="5">5</button>
             <button class="btn" data-value="6">6</button>
-            <button class="btn" data-action="operator">-</button>
+            <button class="btn" data-action="operator" data-value="-">-</button>
 
             <button class="btn" data-value="1">1</button>
             <button class="btn" data-value="2">2</button>
             <button class="btn" data-value="3">3</button>
-            <button class="btn" data-action="operator">+</button>
+            <button class="btn" data-action="operator" data-value="+">+</button>
 
             <button class="btn" data-value="0">0</button>
             <button class="btn" data-action="decimal">.</button>
